--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1>Comenzando con Git</h1>
     </header>
 
-    <main></main>
+    <main>
+        <h2>voy a subir algo</h2>
+    </main>
 
     <footer></footer>
     
